<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome Follower</string>
    <string name="bold_name">GrindNMosh\'s Twit World!</string>
    <string name="instructions">Select a post for more detailed info</string>
    <string name="webButt">GD Blog</string>
    <string name="fbButt"> GD FB</string>
    <string name="det_name">Twit Details</string>
    <string name="submit">Send</string>
    <string name ="action_search">Search</string>
    <string name ="menu_preferences">Preferences</string>
    <string name ="menu_fav">Favorite</string>
    <string name ="menu_about">Info</string>
    <string name="search_hint">Search for words in tweets</string>
    <string name="search_name">Search Results</string>
    <string name="user">enter user name</string>
    <string name ="usern">Username: </string>
    <string name="pass">*****</string>
    <string name="passw">Password: </string>
    <string name="aboutit">About This</string>
    <string name="starred">Star Ratings</string>
    <string name="name">Robert Warren</string>
    <string name="classtime">Java 2 Week 4</string>
    <string name="term">Term 1406</string>
    <string name="instructor">Instructor: Sherry Dubin</string>
    <string name="atatic">Static Text File</string>

    <string-array name="choices_array">
        <item >Test 1 for function</item>
        <item >Test 2 for function</item>
        <item >Test 3 for function</item>
        <item >Test 4 for function</item>
        <item >Test 5 for function</item>
        <item >Test 6 for function</item>
        <item >Test 7 for function</item>
        <item >Test 8 for function</item>
    </string-array>



</resources>
